// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput should accept text input 1`] = `
<input
  aria-label="Text input"
  class="textInput"
  formnovalidate=""
  type="text"
  value="Initial text"
/>
`;

exports[`TextInput should accept text input 2`] = `
<input
  aria-label="Text input"
  class="textInput"
  formnovalidate=""
  type="text"
  value="New text"
/>
`;

exports[`TextInput should render 1`] = `
<input
  aria-label="Text input"
  class="textInput"
  formnovalidate=""
  type="text"
  value=""
/>
`;

exports[`TextInput should render with initial text 1`] = `
<input
  aria-label="Text input"
  class="textInput"
  formnovalidate=""
  type="text"
  value="Initial text"
/>
`;
